export enum ETaskStatus {
  TODO = 'TODO',
  DOING = 'Doing',
  DONE = 'Done',
}
