@startuml TodoList-Loopback

skinparam linetype ortho

entity Project {
  - id : ObjectId <<generated>>
  --
  ~ updatedBy: ObjectId <<FK>>
  ~ createdBy: ObjectId <<FK>>
  --
  * name : String
  + description : String
  + createdAt: Date
  + updatedAt: Date
  + isDeleted: Boolean
}

entity User {
  - id : ObjectId <<generated>>
  --
  * email : String
  * password : String
  + createdAt: Date
  + updatedAt: Date
}

entity Task {
  - id : ObjectId <<generated>>
  --
  ~ createdBy: ObjectId <<FK>>
  ~ updatedBy: ObjectId <<FK>>
  ~ linkedTo: ObjectId <<FK>>
  ~ projectId: ObjectId <<FK>>
  ~ assignTo: ObjectId <<FK>>
  --
  * name : ObjectId
  * isCreatedByAdmin: Boolean
  + description : String
  + status: ETaskStatus
  + createdAt: Date
  + updatedAt: Date
  + isDeleted: Boolean
}

entity ProjectUser {
  - id : ObjectId <<generated>>
  --
  ~ projectId: ObjectId <<FK>>
  ~ userId: ObjectId <<FK>>
  --
  * role : EUserRole
}

enum EUserRole {
  + ADMIN
  + USER
}

enum ETaskStatus {
  + TODO
  + DOING
  + DONE
}

Task -- ETaskStatus

ProjectUser -- EUserRole

Task ||--||Task

ProjectUser }|--|| User
ProjectUser }|--|| Project

Task }|--|| Project
Task }|--|| User

@enduml
